...
          bottomNavigationBar: ClipRRect(
            borderRadius: BorderRadius.only(
              topLeft: Radius.circular(20.0),
              topRight: Radius.circular(20.0),
            ),
            child: BottomNavigationBar(
              key: ValueKey('bottomNavBar'),
              onTap: (int value) {
                if (value != 3) {
                  provider.setLoading(false, willNotify: false);
                  provider.setCurrentTab(value, willNotify: false);
                  provider.setTransactionClicked(false, willNotify: false);
                  provider.setNeedsUpdate(false, willNotify: false);
...
    provider.setTransactionClicked(false, willNotify: false);
    provider.setLoading(false, willNotify: false);
    provider.setAutoValidate(false, willNotify: false);
    Navigator.of(context).push(
      MaterialPageRoute(
        builder: (context) => AddTransaction(
          transactionType: transactionType,
          category: category,
        ),
      ),
    );
  }
}
...
