...
                  child: Column(
                    children: <Widget>[
                      Container(
                        width: deviceWidth * 0.75,
                        height: 50.0,
                        child: RaisedButton(
                          key: ValueKey('loginButton'),
                          onPressed: () {
                            _onLoginPressed();
                          },
                          child: HeaderWidget(
                            headerText: appLocalizations.translate('login'),
                            maxFontSize: 20,
...
