...
          _loadMore();
          return true;
        }
        return false;
      },
      child: ListView.builder(
        key: ValueKey('transactionListview'),
        shrinkWrap: true,
        physics: BouncingScrollPhysics(),
        itemCount: provider.transactionList?.length,
        itemBuilder: (context, index) {
          TransactionDetails _currentTransaction = provider.transactionList?.elementAt(index);

...
